cargo_test.errors
warning: ambiguous glob re-exports
  --> src\lib.rs:29:9
   |
29 | pub use xwing_kem_1024::*;
   |         ^^^^^^^^^^^^^^^^^ the name `ENCAPSULATION_KEY_SIZE` in the value namespace is first re-exported here
30 | pub use xwing_kem_512::*;
31 | pub use xwing_kem_768::*;
   |         ---------------- but the name `ENCAPSULATION_KEY_SIZE` in the value namespace is also re-exported here
   |
   = note: `#[warn(ambiguous_glob_reexports)]` on by default

warning: ambiguous glob re-exports
  --> src\lib.rs:29:9
   |
29 | pub use xwing_kem_1024::*;
   |         ^^^^^^^^^^^^^^^^^ the name `DECAPSULATION_KEY_SIZE` in the value namespace is first re-exported here
30 | pub use xwing_kem_512::*;
31 | pub use xwing_kem_768::*;
   |         ---------------- but the name `DECAPSULATION_KEY_SIZE` in the value namespace is also re-exported here

warning: ambiguous glob re-exports
  --> src\lib.rs:29:9
   |
29 | pub use xwing_kem_1024::*;
   |         ^^^^^^^^^^^^^^^^^ the name `CIPHERTEXT_SIZE` in the value namespace is first re-exported here
30 | pub use xwing_kem_512::*;
31 | pub use xwing_kem_768::*;
   |         ---------------- but the name `CIPHERTEXT_SIZE` in the value namespace is also re-exported here

warning: ambiguous glob re-exports
  --> src\lib.rs:29:9
   |
29 | pub use xwing_kem_1024::*;
   |         ^^^^^^^^^^^^^^^^^ the name `generate_keypair` in the value namespace is first re-exported here
30 | pub use xwing_kem_512::*;
31 | pub use xwing_kem_768::*;
   |         ---------------- but the name `generate_keypair` in the value namespace is also re-exported here

warning: ambiguous glob re-exports
  --> src\lib.rs:29:9
   |
29 | pub use xwing_kem_1024::*;
   |         ^^^^^^^^^^^^^^^^^ the name `EncapsulationKey` in the type namespace is first re-exported here
30 | pub use xwing_kem_512::*;
31 | pub use xwing_kem_768::*;
   |         ---------------- but the name `EncapsulationKey` in the type namespace is also re-exported here

warning: ambiguous glob re-exports
  --> src\lib.rs:29:9
   |
29 | pub use xwing_kem_1024::*;
   |         ^^^^^^^^^^^^^^^^^ the name `DecapsulationKey` in the type namespace is first re-exported here
30 | pub use xwing_kem_512::*;
31 | pub use xwing_kem_768::*;
   |         ---------------- but the name `DecapsulationKey` in the type namespace is also re-exported here

warning: ambiguous glob re-exports
  --> src\lib.rs:29:9
   |
29 | pub use xwing_kem_1024::*;
   |         ^^^^^^^^^^^^^^^^^ the name `Ciphertext` in the type namespace is first re-exported here
30 | pub use xwing_kem_512::*;
31 | pub use xwing_kem_768::*;
   |         ---------------- but the name `Ciphertext` in the type namespace is also re-exported here

warning: `xwing-kem` (lib) generated 7 warnings
warning: `xwing-kem` (lib test) generated 7 warnings (7 duplicates)
   Compiling xwing-kem v0.1.0 (C:\Users\chadm\Projects\xwing-kem)
error[E0061]: this method takes 0 arguments but 1 argument was supplied
  --> tests\xwing_kem_tests.rs:95:33
   |
95 |         let (ct, ss_encap) = pk.encapsulate(&mut rng);
   |                                 ^^^^^^^^^^^ -------- unexpected argument of type `&mut rand_core::OsRng`
   |
note: method defined here
  --> C:\Users\chadm\Projects\xwing-kem\src\xwing_kem_1024.rs:49:12
   |
49 |     pub fn encapsulate(&self) -> (Ciphertext, SharedSecret) {
   |            ^^^^^^^^^^^
help: remove the extra argument
   |
95 -         let (ct, ss_encap) = pk.encapsulate(&mut rng);
95 +         let (ct, ss_encap) = pk.encapsulate();
   |

error[E0061]: this method takes 0 arguments but 1 argument was supplied
   --> tests\xwing_kem_tests.rs:118:26
    |
118 |         let (ct, _) = pk.encapsulate(&mut rng);
    |                          ^^^^^^^^^^^ -------- unexpected argument of type `&mut rand_core::OsRng`
    |
note: method defined here
   --> C:\Users\chadm\Projects\xwing-kem\src\xwing_kem_1024.rs:49:12
    |
 49 |     pub fn encapsulate(&self) -> (Ciphertext, SharedSecret) {
    |            ^^^^^^^^^^^
help: remove the extra argument
    |
118 -         let (ct, _) = pk.encapsulate(&mut rng);
118 +         let (ct, _) = pk.encapsulate();
    |

error[E0061]: this method takes 0 arguments but 1 argument was supplied
   --> tests\xwing_kem_tests.rs:131:30
    |
131 |         let (ct1, ss1) = pk1.encapsulate(&mut rng);
    |                              ^^^^^^^^^^^ -------- unexpected argument of type `&mut rand_core::OsRng`
    |
note: method defined here
   --> C:\Users\chadm\Projects\xwing-kem\src\xwing_kem_1024.rs:49:12
    |
 49 |     pub fn encapsulate(&self) -> (Ciphertext, SharedSecret) {
    |            ^^^^^^^^^^^
help: remove the extra argument
    |
131 -         let (ct1, ss1) = pk1.encapsulate(&mut rng);
131 +         let (ct1, ss1) = pk1.encapsulate();
    |

error[E0061]: this method takes 0 arguments but 1 argument was supplied
   --> tests\xwing_kem_tests.rs:132:30
    |
132 |         let (ct2, ss2) = pk2.encapsulate(&mut rng);
    |                              ^^^^^^^^^^^ -------- unexpected argument of type `&mut rand_core::OsRng`
    |
note: method defined here
   --> C:\Users\chadm\Projects\xwing-kem\src\xwing_kem_1024.rs:49:12
    |
 49 |     pub fn encapsulate(&self) -> (Ciphertext, SharedSecret) {
    |            ^^^^^^^^^^^
help: remove the extra argument
    |
132 -         let (ct2, ss2) = pk2.encapsulate(&mut rng);
132 +         let (ct2, ss2) = pk2.encapsulate();
    |

error[E0061]: this method takes 0 arguments but 1 argument was supplied
   --> tests\xwing_kem_tests.rs:144:34
    |
144 |         let (ct, ss_encap) = pk1.encapsulate(&mut rng);
    |                                  ^^^^^^^^^^^ -------- unexpected argument of type `&mut rand_core::OsRng`
    |
note: method defined here
   --> C:\Users\chadm\Projects\xwing-kem\src\xwing_kem_1024.rs:49:12
    |
 49 |     pub fn encapsulate(&self) -> (Ciphertext, SharedSecret) {
    |            ^^^^^^^^^^^
help: remove the extra argument
    |
144 -         let (ct, ss_encap) = pk1.encapsulate(&mut rng);
144 +         let (ct, ss_encap) = pk1.encapsulate();
    |

error[E0061]: this method takes 0 arguments but 1 argument was supplied
   --> tests\xwing_kem_tests.rs:156:26
    |
156 |         let (ct, _) = pk.encapsulate(&mut rng);
    |                          ^^^^^^^^^^^ -------- unexpected argument of type `&mut rand_core::OsRng`
    |
note: method defined here
   --> C:\Users\chadm\Projects\xwing-kem\src\xwing_kem_1024.rs:49:12
    |
 49 |     pub fn encapsulate(&self) -> (Ciphertext, SharedSecret) {
    |            ^^^^^^^^^^^
help: remove the extra argument
    |
156 -         let (ct, _) = pk.encapsulate(&mut rng);
156 +         let (ct, _) = pk.encapsulate();
    |

error[E0061]: this method takes 0 arguments but 1 argument was supplied
   --> tests\xwing_kem_tests.rs:165:33
    |
165 |         let (ct, ss_encap) = pk.encapsulate(&mut rng);
    |                                 ^^^^^^^^^^^ -------- unexpected argument of type `&mut rand_core::OsRng`
    |
note: method defined here
   --> C:\Users\chadm\Projects\xwing-kem\src\xwing_kem_1024.rs:49:12
    |
 49 |     pub fn encapsulate(&self) -> (Ciphertext, SharedSecret) {
    |            ^^^^^^^^^^^
help: remove the extra argument
    |
165 -         let (ct, ss_encap) = pk.encapsulate(&mut rng);
165 +         let (ct, ss_encap) = pk.encapsulate();
    |

error[E0061]: this method takes 0 arguments but 1 argument was supplied
   --> tests\xwing_kem_tests.rs:179:26
    |
179 |         let (ct, _) = pk.encapsulate(&mut rng);
    |                          ^^^^^^^^^^^ -------- unexpected argument of type `&mut rand_core::OsRng`
    |
note: method defined here
   --> C:\Users\chadm\Projects\xwing-kem\src\xwing_kem_1024.rs:49:12
    |
 49 |     pub fn encapsulate(&self) -> (Ciphertext, SharedSecret) {
    |            ^^^^^^^^^^^
help: remove the extra argument
    |
179 -         let (ct, _) = pk.encapsulate(&mut rng);
179 +         let (ct, _) = pk.encapsulate();
    |

For more information about this error, try `rustc --explain E0061`.
error: could not compile `xwing-kem` (test "xwing_kem_tests") due to 8 previous errors
